[package]
name = "t4"
version = "0.1.3"
edition = "2024"
description = "Local embedded high-performance object store."
license = "Apache-2.0"
repository = "https://github.com/XiangpengHao/t4"

[workspace]
members = [".", "fuzz", "verified"]

[features]
default = []
shuttle = ["dep:shuttle"]
io-uring = ["dep:io-uring"]
kqueue = ["dep:kqueue", "dep:ringbuf"]

[dependencies]
cfg-if = "1.0.4"
libc = "0.2"
shuttle = { version = "0.8", optional = true }
verified = { package = "t4-verified", version = "0.1.3", path = "verified" }
vstd = "=0.0.0-2026-02-22-0103"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
kqueue = { version = "1", optional = true }
ringbuf = { version = "0.4.8", optional = true }

[dev-dependencies]
pollster = "0.4"
tempfile = "3"

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_only)'] }
