[package]
name = "t4"
version = "0.1.5"
edition = "2024"
description = "Local embedded high-performance object store."
license = "Apache-2.0"
repository = "https://github.com/XiangpengHao/t4"

[workspace]
members = [".", "fuzz", "verified"]

[features]
default = []
shuttle = ["dep:shuttle"]

[dependencies]
libc = "0.2"
io-uring = "0.7"
shuttle = { version = "0.9.1", optional = true }
verified = { package = "t4-verified", version = "0.1.5", path = "verified" }
vstd = "=0.0.0-2026-04-20-1748"

[dev-dependencies]
pollster = "0.4"
tempfile = "3"

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_only)'] }
